--- a/app/src/main/res/layout/item_list_content.xml
+++ b/app/src/main/res/layout/item_list_content.xml
@@ -41,9 +41,8 @@
                 android:layout_height="match_parent"
                 android:layout_marginBottom="4dp"
                 android:textSize="16sp"
-                android:ellipsize="end"
                 android:textStyle="bold"
-                android:maxLines="3"
+                tools:maxLines="3"
                 tools:text="@tools:sample/lorem/random" />
 
             <TextView
