dismiss all items

--- a/app/src/main/res/layout-w900dp/item_list.xml
+++ b/app/src/main/res/layout-w900dp/item_list.xml
@@ -18,19 +18,30 @@
     
     -->
 
-
+    <LinearLayout
+    android:orientation="vertical"
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent">
         <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/item_list"
             android:name="com.nelsito.reddittopposts.ItemListFragment"
             android:layout_width="@dimen/item_width"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             app:layoutManager="LinearLayoutManager"
             tools:context="com.nelsito.reddittopposts.ItemListActivity"
             tools:listitem="@layout/item_list_content" />
-
+        <TextView
+            android:id="@+id/btn_dismiss_all"
+            android:padding="16dp"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Dismiss All"/>
+    </LinearLayout>
     <FrameLayout
         android:id="@+id/item_detail_container"
         android:layout_width="0dp"
