--- a/app/src/main/res/layout/item_list_content.xml
+++ b/app/src/main/res/layout/item_list_content.xml
@@ -35,8 +35,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:textSize="12sp"
-                tools:text="Posted by Juan Baragli 10 hours ago" />
-
+                tools:text="Posted by John Doe 10 hours ago" />
 
             <TextView
                 android:id="@+id/post_title"
